--- a/app/views/mainFrame.html
+++ b/app/views/mainFrame.html
@@ -46,9 +46,8 @@
             </div>
             <div class="panel-footer">
                     <span class="pull-right">
-                          You have two new messages from <a href="">Monica Bolt</a>
+                          Dhruv
                     </span>
-                Last update: 21.05.2015
             </div>
         </div>
     </div>
@@ -94,9 +93,8 @@
             </div>
             <div class="panel-footer">
                     <span class="pull-right">
-                          You have two new messages from <a href="">Monica Bolt</a>
+                          Dhruv
                     </span>
-                Last update: 21.05.2015
             </div>
         </div>
     </div>
